# complexpr

./: Cargo.toml  README.md  idea.cxpr
complexpr/: Cargo.toml  README.md
complexpr-bin/: Cargo.toml
complexpr-bin/src/: helper.rs  main.rs  repl.rs
complexpr-stdlib/: Cargo.toml
complexpr-stdlib/src/: io.rs  iter.rs  lib.rs  math.rs  prelude.rs
complexpr/examples/: helloworld.cxpr  iterator.cxpr
complexpr/src/: env.rs  eval.rs  expr.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  token.rs  value.rs
complexpr/src/stdlib/: io.rs  iter.rs  math.rs  mod.rs
complexpr/src/value/: func.rs  mod.rs
examples/: bf.cxpr  cat.cxpr  collatz.cxpr  factorial.cxpr  fib.cxpr  fib_recur.cxpr  helloworld.cxpr  mbrot.cxpr  prime.cxpr  quine.cxpr
src/: eval.rs  expr.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  token.rs  value.rs
src/stdlib/: mod.rs
tests/: code.cxpr  test.rs
