[package]
name = "complexpr-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
complexpr = { path = "../complexpr" }
complexpr-stdlib = { path = "../complexpr-stdlib" }
backtrace = "0.3.66"
rustyline = { version = "10.0.0", optional = true }
rustyline-derive = { version = "0.7.0", optional = true }

[[bin]]
name = "complexpr"
path = "src/main.rs"

[features]
default = ["repl"]
repl = ["dep:rustyline", "dep:rustyline-derive"]
